Fixing Safari navbar flickering ...

--- a/frontend/src/app/components/app/navbar/navbar.component.scss
+++ b/frontend/src/app/components/app/navbar/navbar.component.scss
@@ -296,3 +296,6 @@ colour setting -- text & background
     }
   }
 }
+::ng-deep .mat-sidenav.full-width-sidebar {
+  transition: none;
+}
